# UR5-with-Robotiq-Gripper-and-Kinect

./: README.md
common-sensors-master/: Dockerfile  README.md
common-sensors-master/common_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml  sensors_plugin.xml
common-sensors-master/common_sensors/include/common_sensors/: footprint_filter.h  nan_to_inf_filter.h
common-sensors-master/common_sensors/launch/hokuyo/: hokuyo_urg04lx.launch  hokuyo_utm30lx.launch
common-sensors-master/common_sensors/meshes/sensors/: asus_camera_simple.dae  hokuyo.dae
common-sensors-master/common_sensors/src/: filters.cpp
common-sensors-master/common_sensors/urdf/: common_properties.urdf.xacro
common-sensors-master/common_sensors/urdf/sample_robots/: xtion.urdf.xacro
common-sensors-master/common_sensors/urdf/sensors/: hokuyo_04lx_laser.gazebo.xacro  hokuyo_04lx_laser.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect.urdf.xacro  kinect_gazebo.xacro  kinect_properties.urdf.xacro  xtion.urdf.xacro  xtion_gazebo.urdf.xacro  xtion_xtended_stand.urdf.xacro
myrobot2/: box.scene  floor.scene
myrobot2/myrobot2_description/: CMakeLists.txt  package.xml
myrobot2/myrobot2_description/launch/: myrobot2_upload.launch
myrobot2/myrobot2_description/urdf/: myrobot2_macro.xacro
myrobot2/myrobot2_driver/: CMakeLists.txt  package.xml
myrobot2/myrobot2_driver/config/: gripper_controller.yaml  ur5_controller.yaml
myrobot2/myrobot2_driver/launch/: myrobot2_bringup_ros_control.launch  myrobot2_bringup_ros_control_odroid.launch
myrobot2/myrobot2_gazebo/: CMakeLists.txt  package.xml
myrobot2/myrobot2_gazebo/config/: arm_controller_ur5.yaml  gripper_controller_robotiq.yaml
myrobot2/myrobot2_gazebo/launch/: controller_utils.launch  myrobot2.launch
myrobot2/myrobot2_gazebo/worlds/: myrobot2.world
myrobot2/myrobot2_moveit_config/: CMakeLists.txt  package.xml
myrobot2/myrobot2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  myrobot2 (copy).srdf  myrobot2.srdf  ompl_planning.yaml  sensors.yaml  sensors_kinect_depthmap.yaml
myrobot2/myrobot2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  myrobot2_moveit_controller_manager.launch.xml  myrobot2_moveit_planning_execution.launch  myrobot2_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
myrobot2/myrobot2_usage/: CMakeLists.txt  package.xml
myrobot2/myrobot2_usage/launch/: activate_gripper.launch  activate_gripper_odroid.launch  kinect.launch  kinect_odroid.launch  myrobot2_gazebo_simulation.launch  myrobot2_real_robot.launch  myrobot2_real_robot_odroid.launch
myrobot2/myrobot2_usage/scripts/: drawer_test.py
robotiq-new_2_finger_models/robotiq_2f_controllers/: CMakeLists.txt  package.xml
robotiq-new_2_finger_models/robotiq_2f_controllers/action/: Robotiq2FCommand.action
robotiq-new_2_finger_models/robotiq_2f_controllers/src/: robotiq_2f_controller.cpp
robotiq-new_2_finger_models/robotiq_2f_hardware/: CMakeLists.txt  README.md  package.xml
robotiq-new_2_finger_models/robotiq_2f_hardware/include/robotiq_2f_hardware/: robotiq_2f_hw.h
robotiq-new_2_finger_models/robotiq_2f_hardware/src/: robotiq_2f_hw.cpp
robotiq-new_2_finger_models/robotiq_2f_hw_usb/: CMakeLists.txt  README.md  package.xml
robotiq-new_2_finger_models/robotiq_2f_hw_usb/cmake/: FindModbus.cmake
robotiq-new_2_finger_models/robotiq_2f_hw_usb/include/robotiq_2f_hw_usb/: robotiq_2f_hw_usb.hpp  robotiq_2f_hw_usb_2.hpp  robotiq_2f_usb_comm.h
robotiq-new_2_finger_models/robotiq_2f_hw_usb/launch/: robotiq_2f_85_usb.launch
robotiq-new_2_finger_models/robotiq_2f_hw_usb/scripts/: port_configuration_file.sh
robotiq-new_2_finger_models/robotiq_2f_hw_usb/src/: robotiq_2f_hw_usb_node.cpp
robotiq-new_2_finger_models/robotiq_2f_model/: CMakeLists.txt  package.xml
robotiq-new_2_finger_models/robotiq_2f_robot/: CMakeLists.txt  package.xml
robotiq-new_2_finger_models/robotiq_2f_robot/config/: controllers.yaml
robotiq-new_2_finger_models/robotiq_2f_robot/launch/: bringup.launch  config.rviz
robotiq-new_2_finger_models/robotiq_2f_robot/robot/: simple_rq2f85.urdf.xacro
robotiq-new_2_finger_models/robotiq_c_description/: CMakeLists.txt  README.md  package.xml
robotiq-new_2_finger_models/robotiq_c_description/launch/: config.rviz  display.launch
robotiq-new_2_finger_models/robotiq_c_description/model/: c85.urdf.xacro
robotiq-new_2_finger_models/robotiq_c_description/robot/: simple_c85.urdf.xacro
robotiq-new_2_finger_models/robotiq_ethercat/: CMakeLists.txt
robotiq_85_gripper-master/robotiq_85_bringup/launch/: robotiq_85.launch
robotiq_85_gripper-master/robotiq_85_bringup/rviz/: robotiq_85.rviz
robotiq_85_gripper-master/robotiq_85_description/: package.xml  urdf.rviz
robotiq_85_gripper-master/robotiq_85_description/launch/: display.launch  upload_robotiq_85_gripper.launch
robotiq_85_gripper-master/robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
robotiq_85_gripper-master/robotiq_85_moveit_config/config/: controllers.yaml  fake_controllers.yaml  robotiq_85_gripper.srdf
robotiq_85_gripper-master/robotiq_85_moveit_config/launch/: robotiq_85_moveit_planning_execution.launch
robotiq_85_gripper-master/robotiq_85_msgs/msg/: GripperStat.msg
universal_robot-indigo-devel/ur5_moveit_config/config/: controllers.yaml
universal_robot-indigo-devel/ur5_moveit_config/launch/: move_group.launch  moveit_rviz.launch  (+2 more)
ur_modern_driver-master/: cartesian path example.py  copy  geometry_msgs.msg  moveit_commander  moveit_msgs.msg  rospy  sys  test.cpp  test.py  test2 (copy).py  test2.py  test3.py  test4.py  test5.py  test6.py
ur_modern_driver-master/config/: ur5_controllers.yaml
ur_modern_driver-master/launch/: ur5_ros_control.launch
(+6 files in other folders)
