<?xml version="1.0"?>
<package>
  <name>common_sensors</name>
  <version>0.1.0</version>
  <description>
        Variety of sensor models imported from different ROS packages available throughout the web.
        Picked the best / most suitable models and copied them to this package, so they are all available in one location.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/common_sensors</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <filters plugin="${prefix}/sensors_plugin.xml"/>
  </export>

</package>
